--- a/install
+++ b/install
@@ -30,14 +30,14 @@ mkdir -p $rootfs/etc/options_menu/retroarch/default_files
 copy $rootfs/etc/libretro/retroarch.cfg $rootfs/etc/options_menu/retroarch/default_files/
 copy $rootfs/etc/libretro/retroarch-core-options.cfg $rootfs/etc/options_menu/retroarch/default_files/
 loadscr_path=$rootfs/share/retroarch/assets/core_loading_screens
-for arcade_loadscr in "$loadscr_path/fbalpha2012.png" "$loadscr_path/fbalpha2012_cps1.png" "$loadscr_path/fbalpha2012_cps2.png" "$loadscr_path/fbalpha2012_cps3.png" "$loadscr_path/fbalpha2012_neogeo.png" "$loadscr_path/fb_alpha.png" "$loadscr_path/mame2003.png" "$loadscr_path/mame2003_xtreme.png" "$loadscr_path/mame2010.png" "$loadscr_path/mame2014.png"; do
-  if [ ! -e "$arcade_loadscr" ]; then
-    ln -s "${loadscr_path#/newroot}/mame2000.png" "$arcade_loadscr"
+for arcade_loadscr in fbalpha2012 fbalpha2012_cps1 fbalpha2012_cps2 fbalpha2012_cps3 fbalpha2012_neogeo fb_alpha mame2003 mame2003_xtreme mame2010 mame2014; do
+  if [ ! -e "$loadscr_path/$arcade_loadscr.png" ]; then
+    ln -s "${loadscr_path#/newroot}/mame2000.png" "$loadscr_path/$arcade_loadscr.png"
   fi
 done
-for snes_loadscr in "$loadscr_path/snes9x2002.png" "$loadscr_path/snes9x2005.png" "$loadscr_path/snes9x2010.png"; do
-  if [ ! -e "$snes_loadscr" ]; then
-    ln -s "${loadscr_path#/newroot}/snes9x.png" "$snes_loadscr"
+for snes_loadscr in snes9x2002 snes9x2005 snes9x2010; do
+  if [ ! -e "$loadscr_path/$snes_loadscr.png" ]; then
+    ln -s "${loadscr_path#/newroot}/snes9x.png" "$loadscr_path/$snes_loadscr.png"
   fi
 done
 [ ! -e "$loadscr_path/fceumm.png" ] && ln -s ${loadscr_path#/newroot}/nestopia.png $loadscr_path/fceumm.png
